--- a/src/rentACar/WebAPI/appsettings.json
+++ b/src/rentACar/WebAPI/appsettings.json
@@ -4,9 +4,9 @@
     "SlidingExpiration": 2
   },
   "CloudinaryAccount": {
-    "ApiKey": "",
-    "ApiSecret": "",
-    "Cloud": ""
+    "ApiKey": "871883522262786",
+    "ApiSecret": "C0brA2d0YZoNvLLEPt2tlihyx3o",
+    "Cloud": "RandevunBurada"
   },
   "ConnectionStrings": {
     "RentACarConnectionString": "Server=localhost,1433;Database=RandevunBurada; Trusted_Connection=False; TrustServerCertificate=True; User ID=sa; Password=Sercan1+"
