Servis geliştirmeleri yapıldı

--- a/src/rentACar/WebAPI/appsettings.json
+++ b/src/rentACar/WebAPI/appsettings.json
@@ -6,7 +6,7 @@
   "CloudinaryAccount": {
     "ApiKey": "871883522262786",
     "ApiSecret": "C0brA2d0YZoNvLLEPt2tlihyx3o",
-    "Cloud": "RandevunBurada"
+    "Cloud": "djkdxea97"
   },
   "ConnectionStrings": {
     "RentACarConnectionString": "Server=localhost,1433;Database=RandevunBurada; Trusted_Connection=False; TrustServerCertificate=True; User ID=sa; Password=Sercan1+"
