--- a/src/rentACar/Application/Application.csproj
+++ b/src/rentACar/Application/Application.csproj
@@ -39,6 +39,8 @@
     <None Remove="Services\User\" />
     <None Remove="Features\Business\Models\" />
     <None Remove="Features\Users\Command\" />
+    <None Remove="Features\Business\Queries\Get\" />
+    <None Remove="Features\Employees\Queries\Get\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -86,5 +88,7 @@
     <Folder Include="Services\User\" />
     <Folder Include="Features\Business\Models\" />
     <Folder Include="Features\Users\Command\" />
+    <Folder Include="Features\Business\Queries\Get\" />
+    <Folder Include="Features\Employees\Queries\Get\" />
   </ItemGroup>
 </Project>
